# brains-and-bets

./: README.md
.github/workflows/: deploy.yml
client-svelte/: package-lock.json  package.json  svelte.config.js
client-svelte/src/: app.css
client-svelte/src/lib/: Button.svelte  ButtonSet.svelte  Dropdown.svelte  InputField.svelte  NumberInputField.svelte  Range.svelte
client-svelte/src/lib/datatypes/: Guess.ts  Score.ts
client-svelte/src/lib/functions/: helpers.ts  requests.ts
client-svelte/src/lib/menus/: Guess.svelte  GuessWait.svelte  Join.svelte  Score.svelte  ScoreHeader.svelte  Wager.svelte  WagerWait.svelte
client-svelte/src/routes/: +page.svelte
server-rust/: Cargo.toml  README.md  new_questions.txt  questions.txt  test-questions.txt
server-rust/src/: main.rs  question_lookup.rs  tests.rs  types.rs
server-rust/src/types/: traits.rs
